--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,10 +43,12 @@ $colors: (
     theme : #08B6AD,
     text-grey: #99979a,
     textcolor :#666,
+    link-color :#0066CC,
     placeholder-color :#9A9A9A,
     header-toolbar-background :#707070,
     content-background :#ECECEC,
     whiteColor :#FFF,
+    error :#c80307
 
 );
 
